--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>To-Do App</title>
-		<link href="style.css" rel="stylesheet" />
+		<link href="output.css" rel="stylesheet" />
 		<script src="index.js" defer></script>
 	</head>
 	<body>
-		<h1>To-Do</h1>
-		<main>
-            
-        </main>
+		<main class="flex flex-col justify-center p-44 text-center">
+			<h1>To-Do</h1>
+		</main>
 	</body>
 </html>
