started layout designing

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
 		<script src="index.js" defer></script>
 	</head>
 	<body>
-		<h1>To-Do</h1>
-		<main>
-            
-        </main>
+		<main class="px-40 py-20 flex flex-col items-center gap-y-10">
+			<h1>To-Do</h1>
+			<div class="flex border-2 border-black rounded-4xl">
+
+            </div>
+		</main>
 	</body>
 </html>
