added some more svgs to the tasks design

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 					<img src="../svgs/add_circle.svg" alt="add new list" />
 				</div>
 				<div class="border-2 border-black rounded-4xl w-9/10 overflow-hidden flex flex-col items-center">
-					<div class="px-7 py-3 h-12 flex items-center justify-between w-full">
+					<div class="px-7 py-3 h-14 flex items-center justify-between w-full">
 						<div class="flex gap-x-3 items-center">
 							<img src="../svgs/arrow_drop_down.svg" alt="expand to view tasks">
 							<h2 class="text-2xl">List Name</h2>
@@ -29,11 +29,16 @@
 						</div>
 					</div>
 
-					<div class="flex justify-between p-1 border-2 border-black w-9/10 mb-3 rounded-2xl">
+					<div class="flex justify-between py-1 px-3 border-2 border-black w-9/10 mb-3 rounded-2xl h-12">
 						<div class="flex items-center gap-x-3">
 							<img src="../svgs/menu.svg" alt="reorder drag drop">
-							<img src="../svgs/menu.svg" alt="reorder drag drop">
-							<h2 class="text-2xl">List Name</h2>
+							<img src="../svgs/check_box_outline_blank.svg" alt="complete this task as done">
+							<h2 class="text-xl">Task</h2>
+						</div>
+						<div class="flex items-center gap-x-3">
+							<img src="../svgs/close.svg" alt="clear tasks marked as complete in this list">
+							<img src="../svgs/edit.svg" alt="edit the name of this task">
+							<img src="../svgs/delete.svg" alt="delete this task">
 						</div>
 					</div>
 				</div>
