changed the list container sizing to be more dynamic

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 		<script src="index.js" defer></script>
 	</head>
 	<body>
-		<main class="flex flex-col px-40 py-20 text-center gap-y-10">
+		<main class="flex flex-col py-20 text-center gap-y-10 items-center">
 			<h1 class="text-6xl">To-Do</h1>
-			<div class="border-2 border-black rounded-[50px] overflow-hidden py-6">
+			<div class="border-2 border-black rounded-[50px] w-8/10 py-6">
 				<div class="flex px-10 w-full pb-3">
 					<img class="svg" src="../svgs/add_circle.svg" alt="add new list" onclick="List.createList()" />
 				</div>
