--- a/src/index.html
+++ b/src/index.html
@@ -11,38 +11,10 @@
 		<main class="flex flex-col py-20 text-center gap-y-10 items-center">
 			<h1 class="text-6xl">To-Do</h1>
 			<div class="border-2 border-black rounded-[50px] w-8/10 py-6">
-				<div class="flex px-10 w-full pb-3">
+				<div class="flex justify-center sm:justify-start px-10 w-full pb-3">
 					<img class="svg" src="../svgs/add_circle.svg" alt="add new list" onclick="List.createList()" />
 				</div>
-				<div id="lists-container" class=" flex flex-col gap-y-4 items-center justify-evenly w-full">
-					<!--List-->
-					<div class="border-2 border-black rounded-4xl w-9/10 overflow-hidden flex flex-col items-center">
-						<div class="px-7 py-3 h-14 flex items-center justify-between w-full">
-							<div class="flex gap-x-3 items-center">
-								<img class="svg" src="../svgs/arrow_drop_down.svg" alt="expand to view tasks" />
-								<h2 class="text-2xl">List Name</h2>
-							</div>
-							<div class="flex justify-center gap-x-3">
-								<img class="svg" src="../svgs/sweep.svg" alt="clear all completed tasks in this list" />
-								<img class="svg" src="../svgs/add.svg" alt="add a task to this list" />
-								<img class="svg" src="../svgs/delete.svg" alt="delete this list" />
-							</div>
-						</div>
-						<!--Task-->
-						<div class="flex justify-between py-1 px-3 border-2 border-black w-9/10 mb-3 rounded-2xl h-12">
-							<div class="flex items-center gap-x-3">
-								<img class="svg" src="../svgs/menu.svg" alt="reorder drag drop" />
-								<img class="svg" src="../svgs/check_box_outline_blank.svg" alt="complete this task as done" />
-								<h2 class="text-xl">Task</h2>
-							</div>
-							<div class="flex items-center gap-x-3">
-								<img class="svg" src="../svgs/close.svg" alt="clear tasks marked as complete in this list" />
-								<img class="svg" src="../svgs/edit.svg" alt="edit the name of this task" />
-								<img class="svg" src="../svgs/delete.svg" alt="delete this task" />
-							</div>
-						</div>
-					</div>
-					<!---->
+				<div id="lists-container" class="flex flex-col gap-y-4 items-center justify-evenly w-full">
 				</div>
 			</div>
 		</main>
